--- a/nginx.conf
+++ b/nginx.conf
@@ -51,7 +51,7 @@ http {
             # Remove o prefixo /api e envia para o backend
             rewrite ^/api/(.*) /$1 break;
             
-            proxy_pass http://minecraft-backend:8000;
+            proxy_pass http://eldoria-backend:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
