--- a/nginx.conf
+++ b/nginx.conf
@@ -36,9 +36,38 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name eldoria.net.br www.eldoria.net.br;
+
+        # Desafio ACME do Let's Encrypt
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        # Redireciona todo o resto para HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name eldoria.net.br www.eldoria.net.br;
         root /usr/share/nginx/html;
         index index.html;
+
+        # Certificados Let's Encrypt
+        ssl_certificate /etc/letsencrypt/live/eldoria.net.br/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/eldoria.net.br/privkey.pem;
+
+        # Configurações SSL recomendadas
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 1d;
+
+        # Headers de segurança
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
         # Cache de arquivos estáticos
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
@@ -46,11 +75,9 @@ http {
             add_header Cache-Control "public, immutable";
         }
 
-        # API proxy - IMPORTANTE: redireciona para backend interno
+        # API proxy
         location /api {
-            # Remove o prefixo /api e envia para o backend
             rewrite ^/api/(.*) /$1 break;
-            
             proxy_pass http://eldoria-backend:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -63,7 +90,7 @@ http {
             proxy_read_timeout 86400;
         }
 
-        # SPA - todas as rotas vão para index.html
+        # SPA
         location / {
             try_files $uri $uri/ /index.html;
         }
